[package]
name = "download_git"
version = "0.0.1"
authors = ["halodong"]
edition = "2021"
categories = ["no-std"]
description = "serde-json for no_std programs"
rust-version = "1.60.0"
keywords = ["git", "download"]
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/halodong/git-download"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.2.0"
regex = "1"
tempfile = "3"
